<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#FFF"
    tools:context="com.group.yztcedu.fblife.main.login.LoginActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="38dp">
        <ImageView
            android:id="@+id/imageView_login_back"
            android:layout_width="24dp"
            android:layout_height="34dp"
            android:src="@mipmap/top_back"/>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:id="@+id/linearLayout_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <ImageView
            android:id="@+id/imageView_login"
            android:layout_marginTop="25dp"
            style="@style/login_img"
            android:src="@mipmap/user_default"
            />
        <TextView
            android:id="@+id/textView_login"
            style="@style/login_text"
            android:text="@string/login"
            android:textSize="18dp"
            android:layout_marginTop="10dp"

            />
    </LinearLayout>




    <LinearLayout
        style="@style/login_layout"
        android:layout_marginTop="40dp"
        >
        <LinearLayout
            android:id="@+id/linearLayout_login_save"
            style="@style/login_weight"
            android:padding="5dp"
            android:background="@drawable/bg_line_selector">
            <ImageView
                style="@style/login_img2"
                android:src="@mipmap/personal_save_3x"
                />
            <TextView
                style="@style/login_text"
                android:text="@string/myCollect"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout_login_invitation"
            style="@style/login_weight"
            android:padding="5dp"
            android:background="@drawable/bg_line2_selector"

            >
            <ImageView
                style="@style/login_img2"
                android:src="@mipmap/personal_tiezi_3x"
                />
            <TextView
                style="@style/login_text"
                android:text="@string/myInvitation"
                />
        </LinearLayout>
        <LinearLayout
            android:id="@+id/linearLayout_login_friend"
            style="@style/login_weight"
            android:padding="5dp"
            android:background="@drawable/bg_line_selector">
            <ImageView
                style="@style/login_img2"
                android:src="@mipmap/myfriend_3x"
                />
            <TextView
                style="@style/login_text"
                android:text="@string/myFriend"
                />
        </LinearLayout>
    </LinearLayout>
    <LinearLayout
        style="@style/login_common"
        android:orientation="vertical"
        android:layout_marginTop="30dp">
        <LinearLayout
            style="@style/login_layout">
            <LinearLayout
                android:id="@+id/linearLayout_login_saoyisao"
                style="@style/login_weight">
                <ImageView
                    style="@style/login_img"
                    android:src="@mipmap/personal_saoyisao_new"
                    />
                <TextView
                    style="@style/login_text"
                    android:text="@string/sweep"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout_login_SMS"
                style="@style/login_weight">
                <ImageView
                    style="@style/login_img"
                    android:src="@mipmap/personal_sixin_new"
                    />
                <TextView
                    style="@style/login_text"
                    android:text="@string/privateSMS"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout_login_draft"
                style="@style/login_weight">
                <ImageView
                    style="@style/login_img"
                    android:src="@mipmap/personal_trush_new"
                    />
                <TextView
                    style="@style/login_text"
                    android:text="@string/draft"
                    />
            </LinearLayout>
        </LinearLayout>
        <LinearLayout
            style="@style/login_layout"
            android:layout_marginTop="20dp">
            <LinearLayout
                android:id="@+id/linearLayout_login_search"
                style="@style/login_weight">
                <ImageView
                    style="@style/login_img"
                    android:src="@mipmap/personal_search_new"
                    />
                <TextView
                    style="@style/login_text"
                    android:text="@string/search"
                    />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/linearLayout_login_setting"
                style="@style/login_weight">
                <ImageView
                    style="@style/login_img"
                    android:src="@mipmap/personal_shezhi_new"
                    />
                <TextView
                    style="@style/login_text"
                    android:text="@string/setting"
                    />
            </LinearLayout>
            <LinearLayout
                style="@style/login_weight">
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <TextView
        android:id="@+id/textView_login_quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textSize="18dp"
        android:layout_marginTop="50dp"
        android:visibility="gone"
        android:layout_gravity="center_horizontal"

        android:text="退出登入"/>
</LinearLayout>
