<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".main.search.SearchActivity">
    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#EEEEEE"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:layout_marginLeft="10dp"
            android:layout_height="48dp"
            android:layout_marginRight="10dp"
            >
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="48dp"
                android:background="@android:drawable/editbox_background">
                <ImageView
                    android:layout_width="25dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="5dp"
                    android:src="@mipmap/personal_search_icon"/>
                <EditText
                    android:id="@+id/editText_search"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:singleLine="true"
                    android:background="@null"
                    android:hint="@string/keywords"/>

            </LinearLayout>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/cancell"/>
        </LinearLayout>
    </android.support.v7.widget.Toolbar>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="#EEEEEE">
        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp">
            <RadioButton
                android:id="@+id/search_rb_imformation"
               style="@style/search_radioButton"
                android:text="@string/information"
                />
            <RadioButton
                android:id="@+id/search_rb_forum"
                style="@style/search_radioButton"
                android:layout_marginLeft="1dp"
                android:text="@string/forum"
                />
            <RadioButton
                android:id="@+id/search_rb_user"
                style="@style/search_radioButton"
                android:layout_marginLeft="1dp"

                android:text="@string/user"
                />
        </RadioGroup>
    </LinearLayout>
    <com.handmark.pulltorefresh.library.PullToRefreshListView
        android:id="@+id/ptrlv_search"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>
</LinearLayout>
