<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context="com.group.yztcedu.fblife.main.login.UserLoginActivity">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <android.support.v7.widget.Toolbar
            android:id="@+id/home_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="#FFFFFF"
            app:navigationIcon="@mipmap/login_exit">
        </android.support.v7.widget.Toolbar>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="登入"
            android:textSize="20sp" />
    </RelativeLayout>
    <ImageView
        android:layout_width="160dp"
        android:layout_height="100dp"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"
        android:src="@mipmap/logoinlogo2x"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="15dp"
        android:orientation="vertical"
        android:background="@mipmap/login_bg">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <ImageView
                android:id="@+id/login_iv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@mipmap/login_denglubg_dalogo_01"/>
            <ImageView
                android:layout_toRightOf="@+id/login_iv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@mipmap/login_denglubg_dalogo_02"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toRightOf="@+id/login_iv">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginTop="17dp"
                    android:background="@null"
                    android:hint="@string/username"/>
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:layout_marginTop="32dp"
                    android:background="@null"
                    android:password="true"
                    android:hint="@string/password"/>
            </LinearLayout>


        </RelativeLayout>


        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="login"
            android:background="#78797A"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:text="登录"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="9dp"
            android:layout_marginRight="9dp"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/login_weixin"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:src="@mipmap/ic_dialog_share_weixin"/>
            <TextView
                android:id="@+id/textView_login_QQ"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/weixin_login"
                android:textSize="16dp"
                android:layout_toRightOf="@+id/login_weixin"
                android:layout_centerVertical="true"/>
            <TextView
                android:layout_toLeftOf="@+id/login_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_centerVertical="true"
                android:text="@string/register_account"/>
            <TextView
                android:id="@+id/login_line"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_toLeftOf="@+id/login_forget_password"
                android:text=" | "/>

            <TextView
                android:id="@+id/login_forget_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="16dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:text="@string/forget_password"/>
        </RelativeLayout>

    </LinearLayout>
</LinearLayout>
